--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,6 +2,8 @@
     <div class="header-image"><a href="./index.html" target="_blank" rel="noopener noreferrer">
             <img src="./images/favicon/android-chrome-512x512.png" alt="логотип" width="100" height="100"></a>
     </div>
+
+
     <nav class="nav">
         <ul class="navlist">
             <li class="navitem">
@@ -13,7 +15,7 @@
             <li class="navitem">
                 <a href="#">Семінари</a>
             </li>
-            <li class="navitem">
+            <!-- <li class="navitem">
                 <a href="#">Риболовні тури</a>
             </li>
             <li class="navitem">
@@ -24,7 +26,9 @@
             </li>
             <li class="navitem">
                 <a href="#">Купити відеокурс</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
+
+
 </header>
