--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,9 +1,17 @@
 <header class="header">
-    <div class="header-image"><a href="./index.html" target="_blank" rel="noopener noreferrer">
-            <img src="./images/favicon/android-chrome-512x512.png" alt="логотип" width="100" height="100"></a>
+    <!-- /**
+    |============================
+    | page logo
+    |============================
+    */ -->
+    <div><a href="./index.html" target="_blank" rel="noopener noreferrer">
+            <img class="header-image" src="./images/favicon/android-chrome-512x512.png" alt="логотип"></a>
     </div>
-
-
+    <!-- /**
+|============================
+| navigation
+|============================
+*/ -->
     <nav class="nav">
         <ul class="navlist">
             <li class="navitem">
@@ -15,20 +23,101 @@
             <li class="navitem">
                 <a href="#">Семінари</a>
             </li>
-            <!-- <li class="navitem">
-                <a href="#">Риболовні тури</a>
+            <li class="navitem">
+                <a href="#">Риболовля з чемпіоном</a>
             </li>
             <li class="navitem">
-                <a href="#">Спільна риболовля</a>
+                <a href="#">Гори гайд</a>
             </li>
             <li class="navitem">
-                <a href="#">Замовити тваринні компоненти</a>
+                <a href="#">НХНЛ клуб</a>
             </li>
-            <li class="navitem">
-                <a href="#">Купити відеокурс</a>
-            </li> -->
         </ul>
+        <!-- /**
+        |============================
+        | socials
+        |============================
+        */ -->
+        <div class="socials">
+            <ul class="socials-list">
+                <li class="socials-icon"><a href="https://www.youtube.com/@strashnaya_ribalka/featured" target="_blank"
+                        rel="noopener noreferrer">
+                        <svg class="social-svg" width="20" height="20">
+                            <use href="./images/svg/sprite.svg#youtube"></use>
+                        </svg></a>
+                </li>
+                <li class="socials-icon"> <a href="https://www.facebook.com/Alex.Strashnyi/" target="_blank"
+                        rel="noopener noreferrer">
+                        <svg class="social-svg" width="20" height="20">
+                            <use href="./images/svg/sprite.svg#facebook"></use>
+                        </svg></a>
+                </li>
+                <li class="socials-icon"> <a href="https://www.instagram.com/strashnyifishing/" target="_blank"
+                        rel="noopener noreferrer">
+                        <svg class="social-svg" width="20" height="20">
+                            <use href="./images/svg/sprite.svg#instagram"></use>
+                        </svg></a>
+                </li>
+                <li class="socials-icon"> <a href="https://www.tiktok.com/@strashnyifishing" target="_blank"
+                        rel="noopener noreferrer">
+                        <svg class="social-svg" width="20" height="20">
+                            <use href="./images/svg/sprite.svg#tiktok"></use>
+                        </svg></a>
+                </li>
+                <li class="socials-icon"> <a href="https://xn--m1aaxj.com/" target="_blank" rel="noopener noreferrer">
+                        <svg class="social-svg" width="20" height="20">
+                            <use href="./images/svg/sprite.svg#nxnc"></use>
+                        </svg></a>
+                </li>
+                <!-- /**
+                |============================
+                | select language
+                |============================
+                */ -->
+                <div class="dropdown" style="float:right;">
+                    <button class="dropbtn"><img src="./images/flags/ukr.png" alt="Українська мова" width="20"
+                            height="20"></button>
+                    <div class="dropdown-content">
+                        <a href="#"><img class="img-flag" src="./images/flags/usa.png" alt="English language" width="20"
+                                height="20">English</a>
+                        <a href="#"><img class="img-flag" src="./images/flags/rus.png" alt="Русский язык" width="20"
+                                height="20">Русский</a>
+                    </div>
+                </div>
+            </ul>
+        </div>
+        <!-- /**
+        |============================
+        | mobile menu button
+        |============================
+        */ -->
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+            <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                    clip-rule="evenodd"></path>
+            </svg>
+        </button>
+        <!-- /**
+        |============================
+        | mobile menu
+        |============================
+        */ -->
+        <div class="menu-container js-menu-container" id="mobile-menu">
+            <button class="menu-toggle js-close-menu">
+                <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                    <path fill-rule="evenodd"
+                        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                        clip-rule="evenodd"></path>
+                </svg>
+            </button>
+
+            <ul class="mobile-menu">
+                <li><a href="" class="link">About</a></li>
+                <li><a href="" class="link">Products</a></li>
+                <li><a href="" class="link">Contacts</a></li>
+                <li><a href="" class="link">Career</a></li>
+            </ul>
+        </div>
     </nav>
-
-
 </header>
