--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -37,7 +37,6 @@
 .navitem {
     font-size: small;
     font-weight: bold;
-    filter: drop-shadow(0px 4px 4px rgba(255, 255, 255, 0.25));
     transition: color var(--transition);
 
     &:hover,
@@ -55,9 +54,7 @@
     list-style: none;
 }
 
-.socials-icon {
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
+.socials-icon {}
 
 .socials-icon:hover,
 .socials-icon:focus {
@@ -113,7 +110,7 @@
 }
 
 .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: orangered;
 }
 
 .img-flag {
