--- a/src/sass/_mobmenu.scss
+++ b/src/sass/_mobmenu.scss
@@ -28,6 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    fill: var(--main-text-color);
 
     margin: 0;
     padding: 0;
@@ -46,7 +47,8 @@
 
 .menu-toggle:hover,
 .menu-toggle:focus {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: orangered;
+    fill: white;
 }
 
 .menu-container {
@@ -56,7 +58,7 @@
     width: 100vw;
     height: 100vh;
     padding: 32px;
-    background-color: #3f51b5;
+    background-color: var(--main-text-color);
     z-index: 999;
 
     transform: translateX(100%);
@@ -71,7 +73,8 @@
     position: absolute;
     top: 16px;
     right: 16px;
-    color: #fff;
+    color: white;
+    fill: white;
 }
 
 .mobile-menu {
@@ -83,6 +86,16 @@
 .mobile-menu .link {
     display: block;
     padding: 10px;
-    color: #fff;
+    color: white;
     text-decoration: none;
+}
+
+.mobile-button {
+    width: 24px;
+    height: 24px;
+}
+
+.mobile-menu-button {
+    width: 24px;
+    height: 24px;
 }
