--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,30 +41,31 @@
         <div class="socials">
             <ul class="socials-list">
                 <li class="socials-icon"><a href="https://www.youtube.com/@strashnaya_ribalka/featured" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer" title="YouTube">
                         <svg class="social-svg" width="20" height="20">
                             <use href="./images/svg/sprite.svg#youtube"></use>
                         </svg></a>
                 </li>
                 <li class="socials-icon"> <a href="https://www.facebook.com/Alex.Strashnyi/" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer" title="Facebook">
                         <svg class="social-svg" width="20" height="20">
                             <use href="./images/svg/sprite.svg#facebook"></use>
                         </svg></a>
                 </li>
                 <li class="socials-icon"> <a href="https://www.instagram.com/strashnyifishing/" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer" title="Instagram">
                         <svg class="social-svg" width="20" height="20">
                             <use href="./images/svg/sprite.svg#instagram"></use>
                         </svg></a>
                 </li>
                 <li class="socials-icon"> <a href="https://www.tiktok.com/@strashnyifishing" target="_blank"
-                        rel="noopener noreferrer">
+                        rel="noopener noreferrer" title="TikTok">
                         <svg class="social-svg" width="20" height="20">
                             <use href="./images/svg/sprite.svg#tiktok"></use>
                         </svg></a>
                 </li>
-                <li class="socials-icon"> <a href="https://xn--m1aaxj.com/" target="_blank" rel="noopener noreferrer">
+                <li class="socials-icon"> <a href="https://xn--m1aaxj.com/" target="_blank" rel="noopener noreferrer"
+                        title="нхнч.com">
                         <svg class="social-svg" width="20" height="20">
                             <use href="./images/svg/sprite.svg#nxnc"></use>
                         </svg></a>
@@ -86,6 +87,31 @@
                 </div>
             </ul>
         </div>
+        <!-- /**
+|============================
+| navlist tablet
+|============================
+*/ -->
+        <ul class="navlist-tablet">
+            <li class="navitem">
+                <a href="#">Біографія</a>
+            </li>
+            <li class="navitem">
+                <a href="#">Статті</a>
+            </li>
+            <li class="navitem">
+                <a href="#">Семінари</a>
+            </li>
+            <li class="navitem">
+                <a href="#">Риболовля з чемпіоном</a>
+            </li>
+            <li class="navitem">
+                <a href="#">Гори гайд</a>
+            </li>
+            <li class="navitem">
+                <a href="#">НХНЛ клуб</a>
+            </li>
+        </ul>
         <!-- /**
         |============================
         | mobile menu button
@@ -113,11 +139,22 @@
             </button>
 
             <ul class="mobile-menu">
-                <li><a href="" class="link">About</a></li>
-                <li><a href="" class="link">Products</a></li>
-                <li><a href="" class="link">Contacts</a></li>
-                <li><a href="" class="link">Career</a></li>
+                <li><a href="" class="link">Біографія</a></li>
+                <li><a href="" class="link">Статті</a></li>
+                <li><a href="" class="link">Семінари</a></li>
+                <li><a href="" class="link">Риболовля з чемпіоном</a></li>
+                <li><a href="" class="link">Гори гайд</a></li>
+                <li><a href="" class="link">НХНЛ клуб</a></li>
+                <li><a href="" class="link">Замовити тваринні компоненти</a></li>
             </ul>
         </div>
     </nav>
 </header>
+<!-- /**
+|============================
+| script for mobile menu
+|============================
+*/ -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
