--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -18,8 +18,13 @@
 
 .nav {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 20px;
+    justify-content: center;
+
+    @media screen and (min-width: 1200px) {
+        gap: 40px;
+    }
 }
 
 .navlist {
@@ -34,6 +39,22 @@
 
 }
 
+.navlist-tablet {
+    display: none;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        list-style: none;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: none;
+    }
+
+}
+
 .navitem {
     font-size: small;
     font-weight: bold;
@@ -42,26 +63,31 @@
     &:hover,
     &:focus {
         color: orangered;
-        transition: color var(--transition);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        transition: all var(--transition);
     }
 }
 
-.socials {}
-
 .socials-list {
     display: flex;
-    gap: 15px;
-    list-style: none;
-}
+    gap: 3px;
 
-.socials-icon {}
+    @media screen and (min-width: 320px) {
+        gap: 12px;
+        list-style: none;
+    }
+
+    @media screen and (min-width: 768px) {
+        gap: 15px;
+    }
+}
 
 .socials-icon:hover,
 .socials-icon:focus {
     cursor: pointer;
     color: orangered;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    transition: color var(--transition);
+    transition: all var(--transition);
 }
 
 .social-svg {
