--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,16 +1,24 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-
-<!-- Swiper -->
-<div class="swiper mySwiper">
+<div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="./images/hero/slide1.jpg" alt=""></div>
-        <div class="swiper-slide"><img src="./images/hero/slide1.jpg" alt=""></div>
-        <div class="swiper-slide"><img src="./images/hero/slide1.jpg" alt=""></div>
+        <p class="swiper-slide red text">Swiper Slide1</p>
+        <p class="swiper-slide green text">Swiper Slide2</p>
+        <p class="swiper-slide blue text">Swiper Slide3</p>
     </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
-</div>
 
-<!-- Swiper JS -->
-<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <div class="swiper-button-prev swiper-button-white"></div>
+    <div class="swiper-button-next swiper-button-white"></div>
+
+</div>
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+        <p class="swiper-slide red text">Swiper Slide1</p>
+        <p class="swiper-slide green text">Swiper Slide2</p>
+        <p class="swiper-slide blue text">Swiper Slide3</p>
+    </div>
+    <div class="swiper-pagination"></div>
+
+    <div class="swiper-button-prev swiper-button-white"></div>
+    <div class="swiper-button-next swiper-button-white"></div>
+
+</div>
