--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,24 +1,23 @@
-<div class="swiper-container">
+<!-- Link Swiper's CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+
+<!-- Swiper -->
+<div class="swiper mySwiper">
     <div class="swiper-wrapper">
-        <p class="swiper-slide red text">Swiper Slide1</p>
-        <p class="swiper-slide green text">Swiper Slide2</p>
-        <p class="swiper-slide blue text">Swiper Slide3</p>
+        <div class="swiper-slide">1</div>
+        <div class="swiper-slide">2</div>
+        <div class="swiper-slide">3</div>
+        <!-- <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">Slide 6</div>
+            <div class="swiper-slide">Slide 7</div>
+            <div class="swiper-slide">Slide 8</div>
+            <div class="swiper-slide">Slide 9</div> -->
     </div>
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
     <div class="swiper-pagination"></div>
-
-    <div class="swiper-button-prev swiper-button-white"></div>
-    <div class="swiper-button-next swiper-button-white"></div>
-
 </div>
-<div class="swiper-container">
-    <div class="swiper-wrapper">
-        <p class="swiper-slide red text">Swiper Slide1</p>
-        <p class="swiper-slide green text">Swiper Slide2</p>
-        <p class="swiper-slide blue text">Swiper Slide3</p>
-    </div>
-    <div class="swiper-pagination"></div>
 
-    <div class="swiper-button-prev swiper-button-white"></div>
-    <div class="swiper-button-next swiper-button-white"></div>
-
-</div>
+<!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
