--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,15 +4,11 @@
 <!-- Swiper -->
 <div class="swiper mySwiper">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">1</div>
-        <div class="swiper-slide">2</div>
-        <div class="swiper-slide">3</div>
-        <!-- <div class="swiper-slide">Slide 4</div>
-            <div class="swiper-slide">Slide 5</div>
-            <div class="swiper-slide">Slide 6</div>
-            <div class="swiper-slide">Slide 7</div>
-            <div class="swiper-slide">Slide 8</div>
-            <div class="swiper-slide">Slide 9</div> -->
+        <div class="swiper-slide"><img src="./images/hero/slide1.jpg" alt="slide1"></div>
+        <div class="swiper-slide"><img src="./images/hero/slide2.jpg" alt="slide2"></div>
+        <div class="swiper-slide"><img src="./images/hero/slide3.jpg" alt="slide3"></div>
+        <div class="swiper-slide"><img src="./images/hero/slide4.jpg" alt="slide4"></div>
+        <div class="swiper-slide"><img src="./images/hero/slide5.jpg" alt="slide5"></div>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
