--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -8,3 +8,10 @@
 .copyrights {
     text-align: center;
 }
+
+.horizontal-line {
+    height: 0.5px;
+    background-color: var(--main-text-color);
+    border: none;
+
+}
