--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,8 +9,9 @@
 :root {
     // fonts
     --main-font: Raleway, sans-serif;
-    // text colors
+    // colors
     --main-text-color: #0A6AAD;
+    --main-text-accent: #2d9ded;
     --placeholder-color: #505050;
     // background colors
     --background-main-color: AliceBlue;
