--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,15 +1,43 @@
 <div class="section">
     <div class="order-bait">
         <img class="order-bait-img" src="./images/main/bait.jpg" alt="bait">
-        <div class="order-bait-wrap">
+        <div class="section-wrap">
             <h2 class="section-title">ЗАМОВИТИ ТВАРИННІ КОМПОНЕНТИ</h2>
             <p class="main-text">Одним з ключових факторів успішної рыболовлі є свіжа наживка.
                 Мотиль, опариш, пінка, кенійка, черв'як, дендробена, хробак, кормовий мотиль, варена конопля и інше Ви
-                отримаєте з перших рук від виробника!Не витрачайте свій дорогоцінний час і кошти в пошуках наживки!
+                отримаєте з перших рук від виробника! Не витрачайте свій дорогоцінний час і кошти в пошуках наживки!
                 Зробіть замовлення за 5 хвилин і отримайте його через 24 години!</p>
             <a href="https://xn--m1aaxj.com/Home/BaitOrder" target="_blank" rel="noopener noreferrer"><button
                     class="main-button">ЗАМОВИТИ</button></a>
         </div>
     </div>
+</div>
 
+<div class="section">
+    <div class="about-me">
+        <img class="section-pic-img" src="./images/main/youtube.jpg" alt="portrait">
+        <div class="section-wrap">
+            <h2 class="section-title">КАНАЛ "СТРАШНАЯ РЫБАЛКА"</h2>
+            <p class="main-text"> Вже більше 10 років я займаюся спортивною фідерною риболовлею і є першим Чемпіоном
+                світу з фідерної риболовлі, а також призером Чемпіонатів світу з цієї дисципліни серед клубів,
+                багаторазовий переможець всеукраїнських змагань. На моєму каналі ви дізнаєтеся всі тонкощі та секрети,
+                що зробить вашу риболовлю більш приємною та ефективною! </p>
+            <a href="https://www.youtube.com/@strashnaya_ribalka/featured" target="_blank"
+                rel="noopener noreferrer"><button class="main-button">ДИВИТИСЯ ВІДЕО</button></a>
+        </div>
+    </div>
+</div>
+
+<div class="section">
+    <div class="about-me">
+        <img class="about-me-img" src="./images/main/portrait.png" alt="portrait">
+        <div class="section-wrap">
+            <h2 class="section-title">ПРИЄДНУЙТЕСЯ ДО РИБОЛОВНОГО РУХУ!</h2>
+            <p class="main-text">Наша мета об'єднати 100 мільйонів рибалок в одну велику риболовну силу! Саме для цього
+                був створений риболовний клуб НХНЛ. І це не просто клуб за інтересами. Це риболовний рух, серцем якого є
+                сіціальна мережа для рибалок на основі мобильного додатку.</p>
+            <a href="https://xn--m1aaxj.com/" target="_blank" rel="noopener noreferrer"><button
+                    class="main-button">ДІЗНАТИСЯ БІЛЬШЕ</button></a>
+        </div>
+    </div>
 </div>
