--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,6 +1,6 @@
 .section {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 .order-bait {
@@ -26,7 +26,7 @@
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
-.order-bait-wrap {
+.section-wrap {
     width: 300px;
 
     @media screen and (min-width: 768px) {
@@ -66,4 +66,32 @@
     &:focus {
         background-color: var(--main-text-accent);
     }
+}
+
+.about-me {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+        gap: 100px;
+    }
+}
+
+.about-me-img {
+    width: 250px;
+    height: 250px;
+}
+
+.section-pic-img {
+    width: 250px;
+    height: 250px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
