--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -94,7 +94,7 @@
 */ -->
         <ul class="navlist-tablet">
             <li class="navitem">
-                <a href="./biography.html">Біографія</a>
+                <a href="./biography.html" target="_self">Біографія</a>
             </li>
             <li class="navitem">
                 <a href="#">Статті</a>
