--- a/src/partials/biography.html
+++ b/src/partials/biography.html
@@ -2,15 +2,15 @@
 <html lang="uk">
 
 <head>
-    <meta charset="UTF-8" />
+    <!-- <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Олексій Страшний - біографія</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="./images/favicon/site.webmanifest" />
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script src="./index.js" type="module"></script>
+    <link rel="manifest" href="./images/favicon/site.webmanifest" /> -->
+    <!-- <link rel="stylesheet" href="./sass/index.scss" />
+    <script src="./index.js" type="module"></script> -->
 </head>
 
 <body>
