--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
     <nav class="nav">
         <ul class="navlist">
             <li class="navitem">
-                <a href="#">Біографія</a>
+                <a href="./partials/biography.html">Біографія</a>
             </li>
             <li class="navitem">
                 <a href="#">Статті</a>
@@ -94,7 +94,7 @@
 */ -->
         <ul class="navlist-tablet">
             <li class="navitem">
-                <a href="./biography.html" target="_self">Біографія</a>
+                <a href="./partials/biography.html" target="_self">Біографія</a>
             </li>
             <li class="navitem">
                 <a href="#">Статті</a>
