--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,22 +15,22 @@
     <nav class="nav">
         <ul class="navlist">
             <li class="navitem">
-                <a href="./biography.html">Біографія</a>
+                <a href="./bio.html">Біографія</a>
             </li>
             <li class="navitem">
-                <a href="#">Статті</a>
+                <a href="./articles.html">Статті</a>
             </li>
             <li class="navitem">
-                <a href="#">Семінари</a>
+                <a href="./seminars.html">Семінари</a>
             </li>
             <li class="navitem">
-                <a href="#">Риболовля з чемпіоном</a>
+                <a href="./fishwithme.html">Риболовля з чемпіоном</a>
             </li>
             <li class="navitem">
-                <a href="#">Гори гайд</a>
+                <a href="./mountains.html">Гори гайд</a>
             </li>
             <li class="navitem">
-                <a href="#">НХНЛ клуб</a>
+                <a href="./nxnc.html">НХНЛ клуб</a>
             </li>
         </ul>
         <!-- /**
@@ -94,22 +94,22 @@
 */ -->
         <ul class="navlist-tablet">
             <li class="navitem">
-                <a href="./biography.html">Біографія</a>
+                <a href="./bio.html">Біографія</a>
             </li>
             <li class="navitem">
-                <a href="#">Статті</a>
+                <a href="./articles.html">Статті</a>
             </li>
             <li class="navitem">
-                <a href="#">Семінари</a>
+                <a href="./seminars.html">Семінари</a>
             </li>
             <li class="navitem">
-                <a href="#">Риболовля з чемпіоном</a>
+                <a href="./fishwithme.html">Риболовля з чемпіоном</a>
             </li>
             <li class="navitem">
-                <a href="#">Гори гайд</a>
+                <a href="./mountains.html">Гори гайд</a>
             </li>
             <li class="navitem">
-                <a href="#">НХНЛ клуб</a>
+                <a href="./nxnc.html">НХНЛ клуб</a>
             </li>
         </ul>
         <!-- /**
@@ -139,13 +139,14 @@
             </button>
 
             <ul class="mobile-menu">
-                <li><a href="" class="link">Біографія</a></li>
-                <li><a href="" class="link">Статті</a></li>
-                <li><a href="" class="link">Семінари</a></li>
-                <li><a href="" class="link">Риболовля з чемпіоном</a></li>
-                <li><a href="" class="link">Гори гайд</a></li>
-                <li><a href="" class="link">НХНЛ клуб</a></li>
-                <li><a href="" class="link">Замовити тваринні компоненти</a></li>
+                <li><a href="./index.html" class="link">ГОЛОВНА</a></li>
+                <li><a href="./bio.html" class="link">Біографія</a></li>
+                <li><a href="./articles.html" class="link">Статті</a></li>
+                <li><a href="./seminars.html" class="link">Семінари</a></li>
+                <li><a href="./fishwithme.html" class="link">Риболовля з чемпіоном</a></li>
+                <li><a href="./mountains.html" class="link">Гори гайд</a></li>
+                <li><a href="./nxnc.html" class="link">НХНЛ клуб</a></li>
+                <li><a href="https://xn--m1aaxj.com/Home/BaitOrder" class="link">Замовити тваринні компоненти</a></li>
             </ul>
         </div>
     </nav>
