--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,8 +1,11 @@
 <div class="section">
     <div class="order-bait">
-        <img class="order-bait-img" src="./images/main/bait.jpg" alt="bait">
+        <a href="https://xn--m1aaxj.com/Home/BaitOrder" target="_blank" rel="noopener noreferrer"><img
+                class="order-bait-img" src="./images/main/bait.jpg" alt="bait"></a>
         <div class="section-wrap">
-            <h2 class="section-title">ЗАМОВИТИ ТВАРИННІ КОМПОНЕНТИ</h2>
+            <a href="https://xn--m1aaxj.com/Home/BaitOrder" target="_blank" rel="noopener noreferrer">
+                <h2 class="section-title">ЗАМОВИТИ ТВАРИННІ КОМПОНЕНТИ</h2>
+            </a>
             <p class="main-text">Одним з ключових факторів успішної рыболовлі є свіжа наживка.
                 Мотиль, опариш, пінка, кенійка, черв'як, дендробена, хробак, кормовий мотиль, варена конопля и інше Ви
                 отримаєте з перших рук від виробника! Не витрачайте свій дорогоцінний час і кошти в пошуках наживки!
@@ -15,9 +18,12 @@
 
 <div class="section">
     <div class="about-me">
-        <img class="section-pic-img" src="./images/main/youtube.jpg" alt="portrait">
+        <a href="https://www.youtube.com/@strashnaya_ribalka/featured" target="_blank" rel="noopener noreferrer"><img
+                class="section-pic-img" src="./images/main/youtube.jpg" alt="portrait"></a>
         <div class="section-wrap">
-            <h2 class="section-title">КАНАЛ "СТРАШНАЯ РЫБАЛКА"</h2>
+            <a href="https://www.youtube.com/@strashnaya_ribalka/featured" target="_blank" rel="noopener noreferrer">
+                <h2 class="section-title">КАНАЛ "СТРАШНАЯ РЫБАЛКА"</h2>
+            </a>
             <p class="main-text"> Вже більше 10 років я займаюся спортивною фідерною риболовлею і є першим Чемпіоном
                 світу з фідерної риболовлі, а також призером Чемпіонатів світу з цієї дисципліни серед клубів,
                 багаторазовий переможець всеукраїнських змагань. На моєму каналі ви дізнаєтеся всі тонкощі та секрети,
@@ -30,9 +36,12 @@
 
 <div class="section">
     <div class="about-me">
-        <img class="about-me-img" src="./images/main/portrait.png" alt="portrait">
+        <a href="https://xn--m1aaxj.com/" target="_blank" rel="noopener noreferrer"><img class="section-pic-img"
+                src="./images/main/nxnc.jpg" alt="club logo"></a>
         <div class="section-wrap">
-            <h2 class="section-title">ПРИЄДНУЙТЕСЯ ДО РИБОЛОВНОГО РУХУ!</h2>
+            <a href="https://xn--m1aaxj.com/" target="_blank" rel="noopener noreferrer">
+                <h2 class="section-title">ПРИЄДНУЙТЕСЯ ДО РИБОЛОВНОГО РУХУ!</h2>
+            </a>
             <p class="main-text">Наша мета об'єднати 100 мільйонів рибалок в одну велику риболовну силу! Саме для цього
                 був створений риболовний клуб НХНЛ. І це не просто клуб за інтересами. Це риболовний рух, серцем якого є
                 сіціальна мережа для рибалок на основі мобильного додатку.</p>
