--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -24,6 +24,13 @@
     border-radius: 50%;
     margin-bottom: 20px;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    transition: transform var(--transition);
+
+    &:hover,
+    &:focus {
+        transform: scale(1.1);
+    }
+
 }
 
 .section-wrap {
@@ -37,6 +44,13 @@
 .section-title {
     @media screen and (min-width: 1200px) {
         font-size: x-large;
+    }
+
+    transition: color var(--transition);
+
+    &:hover,
+    &:focus {
+        color: var(--main-text-accent);
     }
 
 }
@@ -60,10 +74,11 @@
     font-weight: 700;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     cursor: pointer;
-    transition: background-color var(--transition);
+    transition: all var(--transition);
 
     &:hover,
     &:focus {
+        transform: scale(1.05);
         background-color: var(--main-text-accent);
     }
 }
@@ -94,4 +109,10 @@
     border-radius: 10px;
     margin-bottom: 20px;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    transition: transform var(--transition);
+
+    &:hover,
+    &:focus {
+        transform: scale(1.1);
+    }
 }
