--- a/src/sass/_seminars.scss
+++ b/src/sass/_seminars.scss
@@ -27,10 +27,16 @@
 }
 
 .contact-form {
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: flex-start;
+}
+
+.form-title {
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 .form-name {
